BUG: 72316

removes the Signature Blocks (SB) from prefix+"-- (end of line)" until a line that
 * does not starts with prefix or
 * starts with prefix+(any substring of prefix)
 where prefix can only have any number of ">" and spaces.

svn path=/trunk/KDE/kdepim/; revision=946070